--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
+    "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.4.3",
