--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
+    "@vuepic/vue-datepicker": "^9.0.3",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.2",
     "vue": "^3.4.37",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.4.3",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "^3.7.0-beta.1",
+    "vuetify-datetime-picker": "^2.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
