--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "@vuepic/vue-datepicker": "^9.0.3",
+    "path": "^0.12.7",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.2",
     "vue": "^3.4.37",
