--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,8 +8,8 @@ RUN apt-get update && \
     apt-get -y install libpq-dev gcc procps && \
     apt-get autoremove && rm -r /var/lib/apt/lists/*
 
-RUN mkdir /app
-WORKDIR /app
-COPY . /app
+RUN mkdir /code
+WORKDIR /code
+COPY . /code
 
 RUN pip install --no-cache-dir -r requirements.txt;
