--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   backend:
     build: ./backend
-    restart: on-failure:5
+    restart: always
     command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     env_file: .env
     volumes:
@@ -39,6 +39,7 @@ services:
         target: /code
     ports:
       - 5173:5173
+      - 5174:5174
     depends_on:
       backend:
         condition: service_started
