added import generation and viewing, no buying yet tho

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV ENV=${ENV}
 
 RUN apt-get update && \
-    apt-get -y install libpq-dev gcc procps && \
+    apt-get -y install libpq-dev gcc procps cron nano && \
     apt-get autoremove && rm -r /var/lib/apt/lists/*
 
 RUN mkdir /code
@@ -13,3 +13,8 @@ WORKDIR /code
 COPY . /code
 
 RUN pip install --no-cache-dir -r requirements.txt;
+
+COPY cronjob /etc/cron.d/imports
+RUN chmod 0644 /etc/cron.d/imports
+
+RUN crontab /etc/cron.d/imports
