--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   backend:
     build: ./backend
     restart: always
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "service cron start && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     env_file: .env
     volumes:
       - ./backend:/code
