--- a/docker-compose-ec2.yml
+++ b/docker-compose-ec2.yml
@@ -65,6 +65,22 @@ services:
         condition: service_completed_successfully
     entrypoint: sh -c "mkdir -p /usr/share/nginx/static && nginx -g 'daemon off;'"
 
+  db_backup:
+    image: postgres:15
+    restart: unless-stopped
+    env_file: .env
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./db_backups:/backups
+    entrypoint: >
+      sh -c "
+      echo '0 2 * * * pg_dump -h db -U $${POSTGRES_USER} $${POSTGRES_DB} \
+      | gzip > /backups/backup_$(date +\%F).sql.gz &&
+      find /backups -type f -mtime +6 -delete' | crontab - &&
+      crond -f -L /dev/stdout
+      "
 
 volumes:
   backend_staticfiles:
@@ -72,5 +88,4 @@ volumes:
   db_data:
   db_logs:
   nginx_logs:
-
 
