--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
-    "@vuepic/vue-datepicker": "^9.0.3",
     "@types/node": "^22.9.0",
+    "@vuepic/vue-datepicker": "^9.0.3",
+    "cytoscape": "^3.33.0",
+    "cytoscape-cola": "^2.5.1",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-klay": "^3.1.4",
+    "dagre": "^0.8.5",
     "path": "^0.12.7",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.2",
